          object in $c->response->body did not report a size.
        - Fixed issue where development server running in fork mode did not
          properly exit after a write error.
          (http://rt.cpan.org/Ticket/Display.html?id=27135)
        - Remove warning for captures that are undef.
        - Fixed $c->read and parse_on_demand mode.

5.7007  2007-03-13 14:18:00
        - Many performance improvements by not using URI.pm:
          * $c->uri_for (approx. 8x faster)
          * $c->engine->prepare_path (approx. 27x faster)
          * $c->engine->prepare_query_parameters (approx. 5x faster)
        - Updated HTTP::Body dependency to 0.9 which fixes the following issues:
          * Handle when IE sometimes sends an extra CRLF after the POST body.
          * Empty fields in multipart/form-data POSTs are no longer ignored.
          * Uploaded files with the name "0" are no longer ignored.
        - Sending SIGHUP to the dev server will now cause it to restart.
        - Allow "0" for a path in uri_for.
        - Performance and stability improvements to the built-in HTTP server.
        - Don't ignore file uploads if form contains a text field with the same name.
          (Carl Franks)
        - Support restart_delay of 0 (for use in the POE engine).
        - Skip body processing if we don't have a Content-Length header.
          Results in about a 9% performance increase when handling GET/HEAD
          requests.
        - Add a default body to redirect responses.
        - MyApp->model/view now looks at MyApp->config->{default_view/model}
          (Bogdan Lucaciu)

5.7006   2006-11-15 14.18
        - Updated manifest
        - Fix Slurp dependency
        - Updated HTTP::Body dependency to 0.6, 0.5 can break on large POST 
          requests.
        - Skip utf8 fix for undef values in uri_with() and uri_for()

5.7005   2006-11-07 19:37:35
        - Fixed lighttpd tests to be properly skipped.